# jupyter_capture_output

./: .gitignore  LICENSE  README.md  cap_example_notebook.ipynb  cap_experimental_video_thumbnail.ipynb  example_notebook.ipynb  jupyterlite_capture_notebook.ipynb  jupyterlite_notebook.ipynb  pyproject.toml
.github/workflows/: JupyterLite.yml
.jupyterlite/: requirements.txt
degbugging_notebooks/: bug_capture_video_Manim_and_web.ipynb  bug_display_html_img.ipynb  cap_experimental_video_thumbnail.ipynb  display_html_img_bug.ipynb  insert_image_markdown.ipynb  special_image_cases.ipynb  special_video_cases.ipynb
jupyter_capture_output/: __init__.py  co_cellmagic.py
